article alignment fix

--- a/unit6/css/style.css
+++ b/unit6/css/style.css
@@ -151,6 +151,8 @@ a {
 
 #events img {	
 	margin: 0 10px 0 10px;
+	height: 155px;
+	width: 200px;
 }
 
 #articles {
